--- a/Menu.css
+++ b/Menu.css
@@ -1,5 +1,7 @@
 body{
-    background-image: url( planodefundo.png);
+    background-image: url(Imagens/planodefundo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 *{
     margin: 0px;
@@ -15,7 +17,9 @@ body{
     box-shadow: 1px 1px 10px 5px gray;
 }
 .cabecalho {
-    background-image: url( planodefundo.png);
+    background-image: url(Imagens/planodefundo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -25,7 +29,11 @@ body{
 }
 
 .cabecalho-imagem {
-    height: 170px;
+    height: 300px;
+    margin-top: -70px;
+    margin-right: -100px;
+   
+
 }
 
 .cabecalho-menu {
@@ -38,7 +46,11 @@ body{
 #divBusca{
     background-color: #f4f1f1;
     border-radius: 1vw;
-    width: 20vw;
+    width: 35vw;
+    margin-top: -40px;
+    margin-bottom: 40px;
+    margin-right: -400px;
+   
   }
   
   
@@ -50,15 +62,21 @@ body{
     border: 15px;
     height: 2.5vw;
     width: 10vw;
+
   }
   .dropbtn {
-    background-image: url( planodefundo.png);
+    background-image: url(Imagens/planodefundo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 0vw;
     padding: 0px;
     font-size: 2.5vw;
     color:#F20574;
     border: none;
     cursor: pointer;
+    margin-right: 100px;
+   
+   
     
   }
   
@@ -70,7 +88,7 @@ body{
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color:cornflowerblue;
+    background-color:#BFD6F5;
     width: 15vw;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -79,7 +97,7 @@ body{
   .dropdown-content a {
     font-family: 'Nunito', sans-serif;
     font-size: 1.2vw;
-    color: #f4f1f1;
+    color: #000;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -97,14 +115,19 @@ body{
 
   .conteudo-padrao{
 
-        margin-bottom: 50px;
-        margin-left: 50px;
+        margin-bottom: 170px;
+        margin-left: 170px;
         margin-right: 170px;
+        margin-top: -50px;
         background-color:#BFD6F5;
         border-radius: 5px;
+        height:700px;
+        
     }
     .conteudo-padrao-imagem {
         height: 170px;
+        margin-left: 40px; 
+        margin-top: 30px;
     }
     
 
